# terminal-emulator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md
Formula/: term.rb
docs/: getting-started.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_vt_parser.rs
linux/: Cargo.toml  README.md
linux/src/: main.rs
macos/TerminalApp/: Package.swift  build.sh  run.sh
macos/TerminalApp/Sources/: AppDelegate.swift  TerminalMetalView.swift  TerminalPane.swift  TerminalViewController.swift  TerminalWindowController.swift  libterm.h  main.swift
src/: bench.rs  clipboard.rs  config.rs  dirty.rs  ffi.rs  image.rs  keybinding.rs  lib.rs  main.rs  pane.rs  plugin.rs  portable.rs  search.rs  security.rs  session.rs  shell_integration.rs  shell_scripts.rs  theme.rs  url_detect.rs  vttest.rs  watcher.rs
src/core/: grid.rs  handler.rs  mod.rs  parser.rs  utf8.rs
src/platform/: app.rs
src/pty/: mod.rs  pty_manager.rs
src/renderer/: atlas.rs  cursor.rs  mod.rs  pipeline.rs  scroll.rs  selection.rs  shaper.rs
