[package]
name = "terminal-emulator"
version = "0.1.0"
edition = "2021"
description = "A fast, GPU-accelerated, cross-platform terminal emulator"

[lib]
name = "libterm"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "term"
path = "src/main.rs"

[dependencies]
wgpu = "24"
winit = "0.30"
harfbuzz_rs = "0.4"
fontdue = "0.9"
mio = { version = "1", features = ["os-poll", "os-ext"] }
nix = { version = "0.29", features = ["process", "signal", "term", "ioctl", "fs"] }
log = "0.4"
env_logger = "0.11"
bytemuck = { version = "1", features = ["derive"] }
bitflags = "2"
pollster = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
